// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`----- React Component Tests: Button ----- 1`] = `
<div
  className="pretty"
  onClick={[Function]}
>
  Not so pretty button
</div>
`;

exports[`----- React Component Tests: Button ----- 2`] = `
<div
  className="pretty"
  onClick={[Function]}
>
  Pretty button now
</div>
`;
